--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compileOnSave": false,
   "files": [
-    "lib/filedrop.ts",
-    "./node_modules/preact/dist/preact"
+    "lib/filedrop.ts"
+//    "./node_modules/preact/dist/preact"
   ],
   "compilerOptions": {
     "strict": true,
